# UniFolder

./: .gitignore  Pagebreak in obsidian.md  Untitled.ipynb  Untitled.md  bohemian_rhapsody.txt  hotel_california.txt  imagine.txt
.obsidian/: community-plugins.json  hotkeys.json  workspace.json
1. Semester/Excalidraw/: Calculus TØ Afsnit 13.4 Opgave 24.excalidraw.md  Calculus TØ Uge 13 Opg 33.md  Calculus TØ Uge 14 Afsnit 14.2 Opg 65.md  Calculus TØ Uge 14 Afsnit 14.2 Opgave 1.md  Calculus TØ Uge 14 Afsnit 14.2 Opgave 2.md  Calculus aflevering 13.md  (+51 more)
2. Semester/Softwarearkitektur/Assignments/Assigment 1/: CMakeLists.txt
2. Semester/Softwarearkitektur/Assignments/Assigment 1/inc/: array_int_queue.h  int_queue.h  list_int_queue.h
2. Semester/Softwarearkitektur/Assignments/Assigment 1/src/: array_int_queue.cpp  list_int_queue.cpp  main.cpp
5. Semester/Deklarativ Programmering/TØ/Week 12/L12/lclib/: .ocamlinit  Convert.ml  DeBruijn.ml  InteractiveLC.ml  LamTerm.ml  Prolog.ml  dune
5. Semester/Deklarativ Programmering/TØ/Week 12/L12/pclib/: .ocamlinit  Formula.ml  InteractivePC.ml  Rewrite.ml  Substitution.ml  Transform.ml  Unification.ml  dune
5. Semester/Deklarativ Programmering/TØ/Week 12/L12/synlib/: ListSet.ml  Patricia.ml  Utility.ml  dune
Excalidraw/: ADA exam - 2023 opg 5.md  ADA exam 2024 question 4.2.md  ADA reexam - 2023 opg 5.B.a.md  ADA reexam - 2023 opg 5.B.b.md  Computer Network Problem 1.1.a.md  Computernetworks Week 3 Problem 2.a.md  DTSPDirectFormIITemplate.md  DTSPDirectFormITemplate.md  DTSPTransposedFormIITemplate.md  DTSPTransposedFormITemplate.md  DTSPexam2021Opg2.2.md  DTSPexam2024Opg3.3.md  Midterm 2025 Opg 3.a.md  Midterm 2025 Opg 4.a.md  POM Week 3 Exercise 4.md  POM Week 3 Exercise 5.md  POM Week 3 Exercise 6.e.md  POM Week 3 Exercise 8.a.md  POM Week 3 Exercise 8.b.md  POM Week 3 Exercise 8.c.md  POM Week 4 Exercise 3.b.md  POM Week 4 Exercise 6.a.md  POM Week 4 Exercise 6.b.md  SLAML Exam Jan2024 4.1.md  SLAML Exam Jan2024 4.3.md  SS Problem 2.1.md  SS Problem 2.2.excalidraw.md  SS Problem 2.3.excalidraw.md  SS Problem 2.4.excalidraw.md  SS Problem 2.6.excalidraw.md  SS Problem 4.1.a.excalidraw.md  SS Problem 4.1.b.excalidraw.md  SS Problem 4.2.a.excalidraw.md  SS Problem 4.2.b.excalidraw.md  SS Problem 9.21.a.md  SS Problem 9.21.b.md  SS Problem 9.21.c.md  SS Problem 9.31.a.md  Signal System Exam Question 1.a 1.md  Signal System Exam Question 1.a 2.md  (+23 more)
Minnas opgave/: Intro.txt  Opgave1.py  Opgave2.py  Opgave3.py  Opgave4.py  tempCodeRunnerFile.py
MusikQuiz/: main.py  populate_songs.py  songs.json  test.py
(+506 files in other folders)
